functionalizing many things

--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -9,7 +9,79 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 require(tidyverse)
 require(magrittr)
+require(rlang)
 options(mc.cores = parallel::detectCores())
+
+snodgrass <- function (num, denom) return((num+.5)/(denom+1))
+snodgrass_vec <- function (vec) return((sum(vec) + 0.5) / (length(x) + 1))
+sdt_pr <- function (hit, fa) return(hit - fa)
+sdt_br <- function(hit, fa) return(fa / (1 - (hit - fa)))
+sdt_aprime <- function (hit, fa) return(.5 + (sign(hit-fa)*((hit-fa)^2 + abs(hit-fa))/(4*pmax(hit,fa)-(4*hit*fa))))
+sdt_b2prime <- function (hit, fa)  return(sign(hit-fa)*(hit*(1-hit) - fa*(1-fa))/(hit*(1-hit) + fa*(1-fa)))
+sdt_dprime <- function (hit, fa) return(qnorm(hit) - qnorm(fa))
+sdt_c <- function (hit, fa) return(-.5 * (qnorm(hit) + qnorm(fa)))
+
+posterior_preplot_params <- function (object) {
+  out <- object %>%
+    as.data.frame() %>%
+    as_tibble() %>%
+    mutate(iteration = 1:nrow(.)) %>%
+    # removes all random effects and sigma terms. should yield fixed effects only
+    select(-contains("["), -contains("sigma")) %>%
+    rename(intercept = "(Intercept)") %>%
+    pivot_longer(cols = -iteration, names_to = "term", values_to = "estimate")
+  
+  return (out)
+}
+
+posterior_preplot_bysubj <- function (object, newdata, pred_col = "y_pred", draws = 1000) {
+  out <- object %>%
+    rstanarm::posterior_linpred(transform = TRUE,
+                                newdata = newdata,
+                                re.form = NULL,
+                                draws = draws)
+
+  # Just the median of every predicted point for every subject
+  # Note that this doesn't select in a paired way for the "median iteration"
+  # returns a VECTOR which needs to get slapped onto newdata
+  out %<>%
+    apply(2, median) %>%
+    t() %>%
+    c()
+  
+  newdata %<>%
+    mutate(!!pred_col := out)
+  
+  return (newdata)
+}
+
+posterior_preplot_fixef <- function (object, newdata, pred_col = "y_pred", draws = 1000) {
+  
+  out <- object %>%
+    rstanarm::posterior_linpred(transform = TRUE,
+                                newdata = newdata,
+                                re.form = NA,
+                                draws = draws)
+  
+  newdata %<>%
+    # Must expand AFTER predictions is already done to repeat for iterations
+    # need the "obs" column to make damn sure that the correct predicted points get pasted on the correct x values
+    mutate(obs = 1:nrow(.),
+           iteration = map(obs, ~1:draws)) %>%
+    unchop(iteration)
+  
+  out %<>%
+    as_tibble() %>%
+    mutate(iteration = 1:nrow(.)) %>%
+    pivot_longer(cols = -iteration, names_to = "obs", values_to = pred_col) %>%
+    mutate(obs = as.integer(obs)) %>%
+    right_join(newdata, by = c("obs", "iteration")) %>%
+    # the obs column obstructs any later pivoting, and is technically redundant if all the x cols are in there,
+    # so get outta here
+    select(-obs)
+  
+  return(out)
+}
 
 demos = read_csv("ignore/demographics/demo_smoke_habits.csv") %>%
   mutate(cigs_per_day_est = 10 * cigs_per_day_est) %>%
@@ -75,20 +147,71 @@ raw %>%
   geom_point()
 ```
 
+## Purely descriptive statistix
+
+Pretty sure most of these hinge on manually calculating A'/d' and such.
+
+```{r}
+sdt_metrics <- raw %>%
+  filter(valid == 1) %>%
+  mutate(corResp = recode(corResp, `0` = "fa", `1` = "hit"),
+         on_smoking = recode(on_smoking, `0` = "off", `1` = "on")) %>%
+  group_by(subj_num, on_smoking, exptCond, cue, corResp) %>%
+  summarize(rate = mean(resp), snod = snodgrass_vec(resp), n_trials = n()) %>%
+  pivot_wider(names_from = corResp, values_from = c(rate, snod)) %>%
+  mutate(aprime = sdt_aprime(rate_hit, rate_fa),
+         dprime = sdt_dprime(snod_hit, snod_fa))
+
+sdt_metrics %>%
+  ggplot(aes(x = exptCond, y = aprime, color = cue)) +
+  geom_line(aes(group =interaction(subj_num, cue)), alpha = 0.5) +
+  geom_point() +
+  facet_grid(~ on_smoking)
+```
+
+Attempting to recreate the original "significant" statistic from Nick's descriptive analysis
+
+```{r}
+sdt_metrics %>%
+  ungroup() %>%
+  select(-starts_with("rate")) %>%
+  mutate(exptCond = recode(exptCond, `0` = "control", `1` = "relational")) %>%
+  pivot_wider(names_from = exptCond, values_from = aprime, names_prefix = "aprime_") %>%
+  mutate(aprime_diff_rel = aprime_relational - aprime_control) %>%
+  ggplot(aes(x = on_smoking, y = aprime_diff_rel, color = cue)) +
+  geom_line(aes(group = interaction(subj_num, cue)), alpha = 0.5) +
+  geom_line(aes(group = cue),
+            data = sdt_metrics %>%
+              ungroup() %>%
+              select(-starts_with("rate")) %>%
+              mutate(exptCond = recode(exptCond, `0` = "control", `1` = "relational")) %>%
+              pivot_wider(names_from = exptCond, values_from = aprime, names_prefix = "aprime_") %>%
+              mutate(aprime_diff_rel = aprime_relational - aprime_control) %>%
+              group_by(on_smoking, cue) %>%
+              summarize(aprime_diff_rel = median(aprime_diff_rel)),
+            size = 1) +
+  geom_point() +
+  geom_hline(yintercept = 0, linetype = 3) +
+  facet_grid(~ cue)
+```
+
+
 ## model fittin
 
 As of 02/05/2020: Keep the original "onoff" model, and add one where the two-way interactions with `corResp` are allowed to vary by subject as well, then do all the model diagnosis stuff per usual
 
 ```{r, eval = FALSE}
-models <- tibble(name = c("onoff", "ppm", "control", "relational"),
-                 has_exptCond = list(0:1, 1L, 0L, 1L),
-                 has_smoking = c("on_smoking", "ppm_z", "on_smoking", "on_smoking")) %>%
+models2 <- tibble(name = c("full", "full_random", "control", "relational"),
+                 has_exptCond = list(0:1, 0:1, 0L, 1L)) %>%
   mutate(data = map(has_exptCond, ~raw %>%
                       filter(valid == 1, exptCond %in% .x)),
-         terms = map_if(has_exptCond, lengths(has_exptCond) > 1,
-                        ~c("corResp", "probe", "exptCond"),
-                        .else = ~c("corResp", "probe")),
-         terms = map2(terms, has_smoking, ~c(.x, .y)),
+         terms = map(1:n(), ~c("corResp", "probe", "on_smoking")),
+         terms = map_if(terms, lengths(has_exptCond) > 1,
+                        ~c(.x, "exptCond"),
+                        .else = ~.x),
+         ranefs = if_else(name == "full_random",
+                          "(1 + (corResp + probe + exptCond + on_smoking)^2 - probe:exptCond - probe:on_smoking - exptCond:on_smoking | subj_num)",
+                          "(1 + corResp | subj_num)"),
          txt_formula = map_chr(terms, ~paste(.x, collapse = " + ")),
          txt_formula = paste0("resp ~ (", txt_formula, ")^3 + (1 + corResp | subj_num)"),
          model = map2(txt_formula, data, ~rstanarm::stan_glmer(as.formula(.x),
@@ -109,28 +232,16 @@ load("ignore/data_R/models_rstanarm.rda")
 ```{r}
 preplots_params <- models %>%
   select(name, iterations = model) %>%
-  mutate(iterations = map(iterations, ~.x %>%
-                            as.data.frame() %>%
-                            as_tibble() %>%
-                            mutate(iteration = 1:nrow(.)) %>%
-                            select(-contains("["), -contains("sigma")) %>%
-                            rename(intercept = "(Intercept)") %>%
-                            pivot_longer(cols = -iteration, names_to = "term", values_to = "estimate")))
+  mutate(iterations = map(iterations, ~posterior_preplot_params(.x)))
 ```
 
 ```{r}
 preplots_bysubj <- models %>%
   select(name, terms, data, model) %>%
   mutate(data = map2(data, terms, ~.x %>% select("subj_num", .y) %>% distinct()),
-         predicted = map2(model, data, ~.x %>%
-                            rstanarm::posterior_linpred(transform = TRUE,
-                                                        newdata = .y,
-                                                        re.form = NULL,
-                                                        draws = 1000)),
-         predicted = map(predicted, ~apply(.x, 2, median) %>% t() %>% c()),
-         predicted = map2(data, predicted, ~.x %>%
-                            mutate(resp_pred = .y,
-                                   corResp = recode(corResp, `0` = "fa", `1` = "hit")) %>%
+         predicted = map2(model, data, ~posterior_preplot_bysubj(.x, .y, pred_col = "resp_pred")),
+         predicted = map(predicted, ~.x %>%
+                            mutate(corResp = recode(corResp, `0` = "fa", `1` = "hit")) %>%
                             pivot_wider(names_from = corResp,
                                         values_from = resp_pred,
                                         names_prefix = "rate_") %>%
@@ -142,24 +253,8 @@ preplots_bysubj <- models %>%
 preplots_fixef <- models %>%
   select(name, terms, data, model) %>%
   mutate(data = map2(data, terms, ~.x %>% select(.y) %>% distinct()),
-         predicted = map2(model, data, ~.x %>%
-                            rstanarm::posterior_linpred(transform = TRUE,
-                                                        newdata = .y,
-                                                        re.form = NA,
-                                                        draws = 1000)),
-         # Must expand AFTER predictions is already done to repeat for iterations
-         data = map(data, ~.x %>%
-                      mutate(obs = 1:nrow(.),
-                             iteration = map(obs, ~1:1000)) %>%
-                      unchop(iteration)),
+         predicted = map2(model, data, ~posterior_preplot_fixef(.x, .y, pred_col = "resp_pred")),
          predicted = map(predicted, ~.x %>%
-                           as_tibble() %>%
-                           mutate(iteration = 1:nrow(.)) %>%
-                           pivot_longer(cols = -iteration, names_to = "obs", values_to = "resp_pred") %>%
-                           mutate(obs = as.integer(obs))),
-         predicted = map2(data, predicted, ~left_join(.x, .y, by = c("obs", "iteration"))),
-         predicted = map(predicted, ~.x %>%
-                           select(-obs) %>%
                            mutate(corResp = recode(corResp, `0` = "fa", `1` = "hit")) %>%
                            pivot_wider(names_from = corResp,
                                        values_from = resp_pred,
